## authentication.py
"""
This file contains the Authentication class with methods for user registration, login, and logout.
"""

class Authentication:
    def register_user(self, username: str, password: str) -> str:
        """
        Registers a new user.
        Args:
            username (str): The username of the user.
            password (str): The password of the user.
        Returns:
            str: The registration status message.
        """
        # Implementation goes here

    def login_user(self, username: str, password: str) -> str:
        """
        Logs in a user.
        Args:
            username (str): The username of the user.
            password (str): The password of the user.
        Returns:
            str: The login status message.
        """
        # Implementation goes here

    def logout_user(self, username: str) -> str:
        """
        Logs out a user.
        Args:
            username (str): The username of the user.
        Returns:
            str: The logout status message.
        """
        # Implementation goes here
