"""
This file contains the Database class with methods for saving and retrieving surveys, participants, and responses.
"""

class Database:
    def save_survey(self, survey: dict) -> str:
        """
        Saves a survey to the database.
        Args:
            survey (dict): The survey object to save.
        Returns:
            str: The save status message.
        """
        # Implementation goes here

    def get_survey(self, survey_id: str) -> dict:
        """
        Retrieves a survey from the database.
        Args:
            survey_id (str): The ID of the survey to retrieve.
        Returns:
            dict: The retrieved survey object.
        """
        # Implementation goes here

    def save_participant(self, participant: dict) -> str:
        """
        Saves a participant to the database.
        Args:
            participant (dict): The participant object to save.
        Returns:
            str: The save status message.
        """
        # Implementation goes here

    def get_participant(self, participant_id: str) -> dict:
        """
        Retrieves a participant from the database.
        Args:
            participant_id (str): The ID of the participant to retrieve.
        Returns:
            dict: The retrieved participant object.
        """
        # Implementation goes here

    def save_response(self, response: dict) -> str:
        """
        Saves a response to the database.
        Args:
            response (dict): The response object to save.
        Returns:
            str: The save status message.
        """
        # Implementation goes here

    def get_response(self, response_id: str) -> dict:
        """
        Retrieves a response from the database.
        Args:
            response_id (str): The ID of the response to retrieve.
        Returns:
            dict: The retrieved response object.
        """
        # Implementation goes here
