## report.py
"""
This file contains the Report class with methods for generating reports and exporting data.
"""

class Report:
    def __init__(self, survey):
        """
        Initializes a Report object.
        Args:
            survey (Survey): The survey object for which the report is generated.
        """
        self.survey = survey

    def generate_report(self) -> str:
        """
        Generates a report based on the survey data.
        Returns:
            str: The status message indicating whether the report was generated successfully or not.
        """
        # Implementation goes here

    def export_data(self) -> str:
        """
        Exports the survey data.
        Returns:
            str: The status message indicating whether the data was exported successfully or not.
        """
        # Implementation goes here
