## survey.py

class Survey:
    def __init__(self, title: str, description: str, questions: list, participants: list, responses: list):
        """
        Initializes a Survey object.
        Args:
            title (str): The title of the survey.
            description (str): The description of the survey.
            questions (list): The list of questions in the survey.
            participants (list): The list of participants in the survey.
            responses (list): The list of responses to the survey.
        """
        self.title = title
        self.description = description
        self.questions = questions
        self.participants = participants
        self.responses = responses

    def create_survey(self) -> str:
        """
        Creates a new survey.
        Returns:
            str: The status message indicating whether the survey was created successfully or not.
        """
        # Implementation goes here

    def edit_survey(self) -> str:
        """
        Edits an existing survey.
        Returns:
            str: The status message indicating whether the survey was edited successfully or not.
        """
        # Implementation goes here

    def delete_survey(self) -> str:
        """
        Deletes an existing survey.
        Returns:
            str: The status message indicating whether the survey was deleted successfully or not.
        """
        # Implementation goes here

    def add_participant(self) -> str:
        """
        Adds a participant to the survey.
        Returns:
            str: The status message indicating whether the participant was added successfully or not.
        """
        # Implementation goes here

    def remove_participant(self) -> str:
        """
        Removes a participant from the survey.
        Returns:
            str: The status message indicating whether the participant was removed successfully or not.
        """
        # Implementation goes here

    def send_survey(self) -> str:
        """
        Sends the survey to the participants.
        Returns:
            str: The status message indicating whether the survey was sent successfully or not.
        """
        # Implementation goes here

    def collect_responses(self) -> str:
        """
        Collects the responses to the survey.
        Returns:
            str: The status message indicating whether the responses were collected successfully or not.
        """
        # Implementation goes here

    def generate_report(self) -> str:
        """
        Generates a report based on the survey data.
        Returns:
            str: The status message indicating whether the report was generated successfully or not.
        """
        # Implementation goes here

    def export_data(self) -> str:
        """
        Exports the survey data.
        Returns:
            str: The status message indicating whether the data was exported successfully or not.
        """
        # Implementation goes here

    def customize_design(self) -> str:
        """
        Customizes the design of the survey.
        Returns:
            str: The status message indicating whether the design was customized successfully or not.
        """
        # Implementation goes here
